Simplify bundle plugin configuration
Change-Id: I13becae493347b7276338b12c5e68eb37b7b0150
Signed-off-by: Robert Varga <rovarga@cisco.com>

--- a/bgp/parser-impl/pom.xml
+++ b/bgp/parser-impl/pom.xml
@@ -87,21 +87,19 @@
 			<plugin>
 				<groupId>org.apache.felix</groupId>
 				<artifactId>maven-bundle-plugin</artifactId>
-				<version>${maven.bundle.version}</version>
 				<extensions>true</extensions>
 				<configuration>
 					<instructions>
-						<Bundle-Name>${project.groupId}.${project.artifactId}</Bundle-Name>
-						<Export-Package>
-							org.opendaylight.protocol.bgp.parser.impl.*
-						</Export-Package>
+                        <Bundle-Name>${project.groupId}.${project.artifactId}</Bundle-Name>
+                        <Export-Package>
+                            org.opendaylight.protocol.bgp.parser.impl.*,
+                        </Export-Package>
 					</instructions>
 				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
-				<version>2.4</version>
 				<executions>
 					<execution>
 						<phase>package</phase>
