--- a/programming/impl/pom.xml
+++ b/programming/impl/pom.xml
@@ -61,13 +61,12 @@
            <plugin>
                <groupId>org.apache.felix</groupId>
                <artifactId>maven-bundle-plugin</artifactId>
-               <version>${maven.bundle.version}</version>
                <extensions>true</extensions>
                <configuration>
                    <instructions>
                        <Bundle-Name>${project.groupId}.${project.artifactId}</Bundle-Name>
                        <Export-Package>
-                           org.opendaylight.bgpcep.programming.impl,
+                           org.opendaylight.bgpcep.programming.impl.*,
                        </Export-Package>
                    </instructions>
                </configuration>
