--- a/commons/parent/pom.xml
+++ b/commons/parent/pom.xml
@@ -148,6 +148,11 @@
             </dependency>
             <dependency>
                 <groupId>org.opendaylight.controller</groupId>
+                <artifactId>netty-config-api</artifactId>
+                <version>${controller.config.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.opendaylight.controller</groupId>
                 <artifactId>sal-binding-api</artifactId>
                 <version>1.0-SNAPSHOT</version>
             </dependency>
