--- a/programming/impl-config/pom.xml
+++ b/programming/impl-config/pom.xml
@@ -34,6 +34,10 @@
             <groupId>org.opendaylight.controller</groupId>
             <artifactId>sal-binding-config</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.opendaylight.controller</groupId>
+            <artifactId>netty-config-api</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
