Add name/description to top-level pom
Change-Id: I7bd3467b31071cec5d52427e2ea2f68734ea9841
Signed-off-by: Robert Varga <rovarga@cisco.com>

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,8 @@
 
     <artifactId>releasepom</artifactId>
     <packaging>pom</packaging>
+    <name>BGPCEP release</name>
+    <description>BGPCEP top-level pom</description>
 
     <modules>
         <!-- Common infra -->
