--- a/commons/parent/pom.xml
+++ b/commons/parent/pom.xml
@@ -46,7 +46,7 @@
         <yangtools.version>0.5.9-SNAPSHOT</yangtools.version>
         <controller.config.version>0.2.3-SNAPSHOT</controller.config.version>
         <yang.binding.version>0.6.0-SNAPSHOT</yang.binding.version>
-        <ietf.types.version>2010.09.24.1</ietf.types.version>
+        <ietf.types.version>2010.09.24.2-SNAPSHOT</ietf.types.version>
         <ietf.topology.version>2013.10.21.0-SNAPSHOT</ietf.topology.version>
     </properties>
 
