Topology builders should require a local rib reference
Change-Id: Iae3678d1e5639511cd8217b16f8a79074dc91d56
Signed-off-by: Robert Varga <rovarga@cisco.com>

--- a/bgp/topology-provider-config/pom.xml
+++ b/bgp/topology-provider-config/pom.xml
@@ -24,6 +24,10 @@
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
+            <artifactId>bgp-rib-api-config</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
             <artifactId>topology-api-config</artifactId>
         </dependency>
         <dependency>
