--- a/commons/parent/pom.xml
+++ b/commons/parent/pom.xml
@@ -34,6 +34,7 @@
         <maven.compiler.version>3.1</maven.compiler.version>
         <maven.info.reports.version>2.7</maven.info.reports.version>
         <maven.jar.version>2.4</maven.jar.version>
+        <maven.javadoc.version>2.9.1</maven.javadoc.version>
         <maven.shade.version>2.1</maven.shade.version>
         <maven.site.version>3.3</maven.site.version>
         <mockito.version>1.9.5</mockito.version>
@@ -237,6 +238,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
+                <version>${maven.javadoc.version}</version>
                 <reportSets>
                     <reportSet>
                         <id>non-aggregate</id>
@@ -453,7 +455,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-javadoc-plugin</artifactId>
-                    <version>2.9.1</version>
+                    <version>${maven.javadoc.version}</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
