--- a/bgp/topology-provider/pom.xml
+++ b/bgp/topology-provider/pom.xml
@@ -39,6 +39,10 @@
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
         </dependency>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+		</dependency>
 
         <dependency>
             <groupId>org.opendaylight.yangtools.model</groupId>
