BUG-242: expose configuration through well-known artifacts
Change-Id: I5167c506347eadb8a397eb4285ec1f903f29ea6b
Signed-off-by: Robert Varga <rovarga@cisco.com>

--- a/bgp/pom.xml
+++ b/bgp/pom.xml
@@ -39,6 +39,8 @@
         <module>util</module>
         <module>update-api-config</module>
         <module>update-mock-config</module>
+
+        <module>controller-config</module>
     </modules>
 
     <dependencyManagement>
