--- a/programming/pom.xml
+++ b/programming/pom.xml
@@ -25,6 +25,8 @@
         <module>spi-config</module>
         <module>topology-api</module>
 		<module>tunnel-api</module>
+
+        <module>controller-config</module>
     </modules>
 
     <dependencyManagement>
