BUG-218: expose instruction status in MD-SAL
Change-Id: I03f9c9562b314a6da264acab418a856daadc7217
Signed-off-by: Robert Varga <rovarga@cisco.com>

--- a/programming/controller-config/src/main/resources/initial/30-programming.conf
+++ b/programming/controller-config/src/main/resources/initial/30-programming.conf
@@ -2,6 +2,10 @@
         <module>
                 <type xmlns:prefix="urn:opendaylight:params:xml:ns:yang:controller:programming:impl">prefix:instruction-scheduler-impl</type>
                 <name>global-instruction-scheduler</name>
+		<data-provider>
+			<type xmlns:binding="urn:opendaylight:params:xml:ns:yang:controller:md:sal:binding">binding:binding-data-broker</type>
+			<name>binding-data-broker</name>
+		</data-provider>
 		<notification-service>
 			<type xmlns:binding="urn:opendaylight:params:xml:ns:yang:controller:md:sal:binding">binding:binding-notification-service</type>
 			<name>binding-notification-broker</name>
