--- a/bgp/testtool/pom.xml
+++ b/bgp/testtool/pom.xml
@@ -25,6 +25,10 @@
 		</dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
+			<artifactId>bgp-linkstate</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>${project.groupId}</groupId>
 			<artifactId>bgp-parser-api</artifactId>
 		</dependency>
 		<dependency>
