--- a/bgp/rib-impl-config/pom.xml
+++ b/bgp/rib-impl-config/pom.xml
@@ -19,10 +19,6 @@
 
     <dependencies>
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-        </dependency>
-        <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>bgp-linkstate</artifactId>
         </dependency>
@@ -73,6 +69,11 @@
 
         <!--test dependencies -->
         <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>org.opendaylight.controller</groupId>
             <artifactId>config-manager</artifactId>
             <version>${controller.config.version}</version>
@@ -112,6 +113,7 @@
         <dependency>
             <groupId>org.opendaylight.controller</groupId>
             <artifactId>sal-binding-broker-impl</artifactId>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
