Fix RIB ID not being set
Change-Id: I3cca8ead10a74206e1fcbeaabf967b8d83e3af55
Signed-off-by: Robert Varga <rovarga@cisco.com>

--- a/bgp/controller-config/src/main/resources/initial/41-bgp-example.conf
+++ b/bgp/controller-config/src/main/resources/initial/41-bgp-example.conf
@@ -33,6 +33,7 @@
 	<module>
 		<type xmlns:prefix="urn:opendaylight:params:xml:ns:yang:controller:bgp:rib:impl">prefix:rib-impl</type>
 		<name>example-bgp-rib</name>
+		<rib-id>example-bgp-rib</rib-id>
 		<bgp>
 			<type xmlns:prefix="urn:opendaylight:params:xml:ns:yang:controller:bgp:listener">prefix:listener</type>
 			<name>example-bgp-peer</name>
