Re-activate disabled test
The test was deactivated due to deficiencies in testing framework.

Change-Id: I3846dfbf44219e3ddde45a01094ca16ac1e167fb
Signed-off-by: Maros Marsalek <mmarsale@cisco.com>
Signed-off-by: Robert Varga <rovarga@cisco.com>

--- a/bgp/rib-impl-config/pom.xml
+++ b/bgp/rib-impl-config/pom.xml
@@ -82,6 +82,12 @@
         </dependency>
         <dependency>
             <groupId>org.opendaylight.controller</groupId>
+            <artifactId>yang-store-impl</artifactId>
+            <version>${controller.config.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.opendaylight.controller</groupId>
             <artifactId>config-manager</artifactId>
             <version>${controller.config.version}</version>
             <scope>test</scope>
