Generate WADL files for RESTCONF endpoints
Change-Id: Ia6f21ef49d12db95b6ef6af2553711f2e8c65497
Signed-off-by: Robert Varga <rovarga@cisco.com>

--- a/commons/parent/pom.xml
+++ b/commons/parent/pom.xml
@@ -417,6 +417,10 @@
                                         <outputBaseDir>target/site</outputBaseDir>
                                     </generator>
                                     <generator>
+                                        <codeGeneratorClass>org.opendaylight.yangtools.yang.wadl.generator.maven.WadlGenerator</codeGeneratorClass>
+                                        <outputBaseDir>target/site</outputBaseDir>
+                                    </generator>
+                                    <generator>
                                         <codeGeneratorClass>
                                             org.opendaylight.controller.config.yangjmxgenerator.plugin.JMXGenerator
                                         </codeGeneratorClass>
