BUG-185 : implemented Best Path Selection Algorithm.
Change-Id: Iec0f6440e21f12e140606973e15901542092c63e
Signed-off-by: Dana Kutenicsova <dkutenic@cisco.com>

--- a/bgp/controller-config/src/main/resources/initial/31-bgp.conf
+++ b/bgp/controller-config/src/main/resources/initial/31-bgp.conf
@@ -30,6 +30,8 @@
 	<module>
 		<type xmlns:prefix="urn:opendaylight:params:xml:ns:yang:controller:bgp:rib:impl">prefix:base-bgp-rib</type>
 		<name>base-bgp-rib</name>
+		<as-number>64496</as-number>
+		<bgp-id>192.0.2.2</bgp-id>
 	</module>
         <module>
                 <type xmlns:prefix="urn:opendaylight:params:xml:ns:yang:controller:bgp:linkstate">prefix:bgp-linkstate</type>
