Added test for ProgrammingServiceImpl
Tested
-scheduling, canceling, executing and cleaning of transactions with or without dependencies
-timeout of instructions in different states with or without dependencies

Change-Id: I2fa5d592c31fe93227c535f2c7deb015aaf4f2e2
Signed-off-by: Maros Marsalek <mmarsale@cisco.com>

--- a/programming/impl/pom.xml
+++ b/programming/impl/pom.xml
@@ -50,6 +50,16 @@
         </dependency>
 
         <!-- Testing dependencies -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>pcep-tunnel-api</artifactId>
+            <version>${project.version}</version>
+            <scope>test</scope>
+        </dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>mockito-configuration</artifactId>
