--- a/bgp/controller-config/src/main/resources/initial/41-bgp-example.conf
+++ b/bgp/controller-config/src/main/resources/initial/41-bgp-example.conf
@@ -34,6 +34,8 @@
 		<type xmlns:prefix="urn:opendaylight:params:xml:ns:yang:controller:bgp:rib:impl">prefix:rib-impl</type>
 		<name>example-bgp-rib</name>
 		<rib-id>example-bgp-rib</rib-id>
+		<local-as>64496</local-as>
+		<bgp-id>192.0.2.2</bgp-id>
 		<bgp>
 			<type xmlns:prefix="urn:opendaylight:params:xml:ns:yang:controller:bgp:listener">prefix:listener</type>
 			<name>example-bgp-peer</name>
