Added routed rpcs to pcep-topology|tunnel-provider
Also added integration(pax-exam) test to test the routing

Change-Id: I385f99ecc0fbb9c3cee0a555c87335f3080e2412
Signed-off-by: Maros Marsalek <mmarsale@cisco.com>
Signed-off-by: Robert Varga <rovarga@cisco.com>

--- a/commons/parent/pom.xml
+++ b/commons/parent/pom.xml
@@ -49,6 +49,7 @@
         <yang.binding.version>0.6.0-SNAPSHOT</yang.binding.version>
         <ietf.types.version>2010.09.24.2-SNAPSHOT</ietf.types.version>
         <ietf.topology.version>2013.10.21.0-SNAPSHOT</ietf.topology.version>
+        <yang-ext.version>2013.09.07.1-SNAPSHOT</yang-ext.version>
     </properties>
 
     <dependencyManagement>
@@ -199,6 +200,11 @@
                 <groupId>org.opendaylight.yangtools.model</groupId>
                 <artifactId>ietf-topology-ospf</artifactId>
                 <version>${ietf.topology.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.opendaylight.yangtools.model</groupId>
+                <artifactId>yang-ext</artifactId>
+                <version>${yang-ext.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
