--- a/commons/parent/pom.xml
+++ b/commons/parent/pom.xml
@@ -57,6 +57,7 @@
         <controller.config.version>0.2.3-SNAPSHOT</controller.config.version>
         <ietf.types.version>2010.09.24.2-SNAPSHOT</ietf.types.version>
         <ietf.topology.version>2013.10.21.0-SNAPSHOT</ietf.topology.version>
+        <yang-ext.version>2013.09.07.1-SNAPSHOT</yang-ext.version>
     </properties>
 
     <dependencyManagement>
@@ -190,6 +191,11 @@
                 <version>1.0-SNAPSHOT</version>
                 <scope>test</scope>
             </dependency>
+            <dependency>
+                <groupId>org.opendaylight.controller</groupId>
+                <artifactId>sal-binding-util</artifactId>
+                <version>1.0-SNAPSHOT</version>
+            </dependency>
 
             <!-- Models -->
             <dependency>
@@ -221,6 +227,11 @@
                 <groupId>org.opendaylight.yangtools.model</groupId>
                 <artifactId>ietf-topology-ospf</artifactId>
                 <version>${ietf.topology.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.opendaylight.yangtools.model</groupId>
+                <artifactId>yang-ext</artifactId>
+                <version>${yang-ext.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
