--- a/pcep/topology-api/pom.xml
+++ b/pcep/topology-api/pom.xml
@@ -60,6 +60,10 @@
                 <configuration>
                     <instructions>
                         <Bundle-Name>${project.groupId}.${project.artifactId}</Bundle-Name>
+                        <Import-Package>
+                            *,
+                            org.opendaylight.yangtools.yang.binding.annotations,
+                        </Import-Package>
                     </instructions>
                 </configuration>
             </plugin>
