--- a/pcep/tunnel-api/pom.xml
+++ b/pcep/tunnel-api/pom.xml
@@ -44,6 +44,10 @@
             <artifactId>yang-binding</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.opendaylight.yangtools.model</groupId>
+            <artifactId>yang-ext</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.opendaylight.yangtools</groupId>
             <artifactId>yang-common</artifactId>
         </dependency>
@@ -62,6 +66,13 @@
                 <configuration>
                     <instructions>
                         <Bundle-Name>${project.groupId}.${project.artifactId}</Bundle-Name>
+                        <Import-Package>
+                            org.opendaylight.yang.gen.*,
+                            org.opendaylight.yangtools.yang.binding,
+                            org.opendaylight.yangtools.yang.binding.annotations,
+                            org.opendaylight.yangtools.yang.common,
+                            com.google.common.collect,
+                        </Import-Package>
                     </instructions>
                 </configuration>
             </plugin>
