Added routed rpcs to pcep-topology|tunnel-provider
Change-Id: I385f99ecc0fbb9c3cee0a555c87335f3080e2412
Signed-off-by: Maros Marsalek <mmarsale@cisco.com>

--- a/pcep/pom.xml
+++ b/pcep/pom.xml
@@ -34,6 +34,7 @@
         <module>tunnel-provider-config</module>
 
         <module>controller-config</module>
+        <!--<module>pcep-it</module>-->
     </modules>
 
     <dependencyManagement>
