--- a/pcep/topology-api/pom.xml
+++ b/pcep/topology-api/pom.xml
@@ -39,7 +39,11 @@
             <groupId>org.opendaylight.yangtools</groupId>
             <artifactId>yang-common</artifactId>
         </dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.opendaylight.yangtools.model</groupId>
+            <artifactId>yang-ext</artifactId>
+        </dependency>
+    </dependencies>
 
     <build>
         <plugins>
