WIP : split stateful draft finished. Build fails, because of BUG-308.
Change-Id: Id06b24b59e3bce2e13a2872f50ce4585c4cea178
Signed-off-by: Dana Kutenicsova <dkutenic@cisco.com>

--- a/commons/parent/pom.xml
+++ b/commons/parent/pom.xml
@@ -260,6 +260,7 @@
                     </reportSet>
                 </reportSets>
             </plugin>
+            <!--  Bug-294 -->
             <!--plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>findbugs-maven-plugin</artifactId>
