WIP : split stateful draft finished. Build fails, because of BUG-308.
Change-Id: Id06b24b59e3bce2e13a2872f50ce4585c4cea178
Signed-off-by: Dana Kutenicsova <dkutenic@cisco.com>

--- a/commons/parent/pom.xml
+++ b/commons/parent/pom.xml
@@ -240,6 +240,7 @@
                     </reportSet>
                 </reportSets>
             </plugin>
+            <!--  Bug-294 -->
             <!--plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>findbugs-maven-plugin</artifactId>
@@ -404,10 +405,10 @@
                                             target/generated-sources/sal
                                         </outputBaseDir>
                                     </generator>
-                                    <generator>
+                                    <!-- generator>
                                         <codeGeneratorClass>org.opendaylight.yangtools.yang.unified.doc.generator.maven.DocumentationGeneratorImpl</codeGeneratorClass>
                                         <outputBaseDir>target/site</outputBaseDir>
-                                    </generator>
+                                    </generator-->
                                     <generator>
                                         <codeGeneratorClass>org.opendaylight.yangtools.yang.wadl.generator.maven.WadlGenerator</codeGeneratorClass>
                                         <outputBaseDir>target/site</outputBaseDir>
