Disable example BGP client
Change-Id: I81cddad1b763458af42500b4b94f7c22b52c7cbc
Signed-off-by: Robert Varga <rovarga@cisco.com>

--- a/bgp/controller-config/src/main/resources/initial/41-bgp-example.conf
+++ b/bgp/controller-config/src/main/resources/initial/41-bgp-example.conf
@@ -6,19 +6,6 @@
 		<bgp-id>192.0.2.2</bgp-id>
 	</module>
 	<module>
-		<type xmlns:prefix="urn:opendaylight:params:xml:ns:yang:controller:bgp:rib:impl">prefix:bgp-impl</type>
-		<name>example-bgp-peer</name>
-		<bgp-dispatcher>
-			<type xmlns:prefix="urn:opendaylight:params:xml:ns:yang:controller:bgp:rib:impl">prefix:bgp-dispatcher</type>
-			<name>global-bgp-dispatcher</name>
-		</bgp-dispatcher>
-		<bgp-proposal>
-			<type xmlns:prefix="urn:opendaylight:params:xml:ns:yang:controller:bgp:rib:impl">prefix:bgp-proposal</type>
-			<name>example-bgp-proposal</name>
-		</bgp-proposal>
-		<host>route-reflector.example.org</host>
-	</module>
-	<module>
 		<type xmlns:prefix="urn:opendaylight:params:xml:ns:yang:controller:reconnectstrategy">prefix:timed-reconnect-strategy</type>
 		<name>example-reconnect-strategy</name>
 		<min-sleep>1000</min-sleep>
@@ -30,16 +17,29 @@
 			<name>global-event-executor</name>
 		</executor>
 	</module>
+	<!--module>
+		<type xmlns:prefix="urn:opendaylight:params:xml:ns:yang:controller:bgp:rib:impl">prefix:bgp-impl</type>
+		<name>example-bgp-peer</name>
+		<bgp-dispatcher>
+			<type xmlns:prefix="urn:opendaylight:params:xml:ns:yang:controller:bgp:rib:impl">prefix:bgp-dispatcher</type>
+			<name>global-bgp-dispatcher</name>
+		</bgp-dispatcher>
+		<bgp-proposal>
+			<type xmlns:prefix="urn:opendaylight:params:xml:ns:yang:controller:bgp:rib:impl">prefix:bgp-proposal</type>
+			<name>example-bgp-proposal</name>
+		</bgp-proposal>
+		<host>route-reflector.example.org</host>
+	</module-->
 	<module>
 		<type xmlns:prefix="urn:opendaylight:params:xml:ns:yang:controller:bgp:rib:impl">prefix:rib-impl</type>
 		<name>example-bgp-rib</name>
 		<rib-id>example-bgp-rib</rib-id>
 		<local-as>64496</local-as>
 		<bgp-id>192.0.2.2</bgp-id>
-		<bgp>
+		<!--bgp>
 			<type xmlns:prefix="urn:opendaylight:params:xml:ns:yang:controller:bgp:listener">prefix:listener</type>
 			<name>example-bgp-peer</name>
-		</bgp>
+		</bgp-->
 		<extensions>
                         <type xmlns:ribspi="urn:opendaylight:params:xml:ns:yang:controller:bgp:rib:spi">ribspi:extensions</type>
                         <name>global-rib-extensions</name>
@@ -104,13 +104,13 @@
                         <provider>/config/modules/module[name='bgp-proposal-impl']/instance[name='example-bgp-proposal']</provider>
 		</instance>
 	</service>
-	<service>
+	<!--service>
 		<type xmlns:prefix="urn:opendaylight:params:xml:ns:yang:controller:bgp:listener">prefix:listener</type>
 		<instance>
 			<name>example-bgp-peer</name>
                         <provider>/config/modules/module[name='bgp-impl']/instance[name='example-bgp-peer']</provider>
 		</instance>
-	</service>
+	</service-->
 	<service>
 		<type xmlns:prefix="urn:opendaylight:params:xml:ns:yang:controller:reconnectstrategy">prefix:reconnect-strategy</type>
 		<instance>
