--- a/commons/parent/pom.xml
+++ b/commons/parent/pom.xml
@@ -23,15 +23,17 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <nexusproxy>http://nexus.opendaylight.org/content</nexusproxy>
+
         <commonscodec.version>1.7</commonscodec.version>
-        <dependency.version>2.8</dependency.version>
         <guava.version>14.0.1</guava.version>
         <java.version.source>1.7</java.version.source>
         <java.version.target>1.7</java.version.target>
         <junit.version>4.10</junit.version>
-        <logback.version>1.0.7</logback.version>
+        <logback.version>1.0.9</logback.version>
         <maven.bundle.version>2.4.0</maven.bundle.version>
         <maven.compiler.version>3.1</maven.compiler.version>
+        <maven.dependency.version>2.8</maven.dependency.version>
         <maven.info.reports.version>2.7</maven.info.reports.version>
         <maven.jar.version>2.4</maven.jar.version>
         <maven.javadoc.version>2.9.1</maven.javadoc.version>
@@ -39,10 +41,8 @@
         <maven.site.version>3.3</maven.site.version>
         <mockito.version>1.9.5</mockito.version>
         <netty.version>4.0.10.Final</netty.version>
-        <nexusproxy>http://nexus.opendaylight.org/content</nexusproxy>
         <slf4j.version>1.7.2</slf4j.version>
         <surefire.version>2.15</surefire.version>
-        <osgi.version>5.0.0</osgi.version>
 
         <yangtools.version>0.5.9-SNAPSHOT</yangtools.version>
         <controller.config.version>0.2.3-SNAPSHOT</controller.config.version>
@@ -167,14 +167,6 @@
                 <artifactId>sal-binding-broker-impl</artifactId>
                 <version>1.0-SNAPSHOT</version>
                 <scope>test</scope>
-            </dependency>
-
-            <!-- OSGi -->
-            <dependency>
-                <groupId>org.osgi</groupId>
-                <artifactId>org.osgi.core</artifactId>
-                <version>${osgi.version}</version>
-                <scope>provided</scope>
             </dependency>
 
             <!-- Models -->
@@ -311,7 +303,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
-                <version>${dependency.version}</version>
+                <version>${maven.dependency.version}</version>
                 <configuration>
                     <failOnWarning>true</failOnWarning>
                     <ignoreNonCompile>true</ignoreNonCompile>
