BUG-221 : created Activator for stateful draft.
Change-Id: Ia10f071da98835c29d0e65bb6b5d2952383916af
Signed-off-by: Dana Kutenicsova <dkutenic@cisco.com>

--- a/commons/parent/pom.xml
+++ b/commons/parent/pom.xml
@@ -404,10 +404,11 @@
                                             target/generated-sources/sal
                                         </outputBaseDir>
                                     </generator>
-                                    <generator>
+                                    <!--  Bug-294 -->
+                                    <!-- generator>
                                         <codeGeneratorClass>org.opendaylight.yangtools.yang.unified.doc.generator.maven.DocumentationGeneratorImpl</codeGeneratorClass>
                                         <outputBaseDir>target/site</outputBaseDir>
-                                    </generator>
+                                    </generator-->
                                     <generator>
                                         <codeGeneratorClass>org.opendaylight.yangtools.yang.wadl.generator.maven.WadlGenerator</codeGeneratorClass>
                                         <outputBaseDir>target/site</outputBaseDir>
