--- a/bgp/rib-spi/pom.xml
+++ b/bgp/rib-spi/pom.xml
@@ -42,7 +42,7 @@
 			<artifactId>mockito-core</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>${project.groupId}</groupId>
+            <groupId>org.opendaylight.yangtools</groupId>
 			<artifactId>mockito-configuration</artifactId>
 		</dependency>
 		<dependency>
