--- a/bgp/topology-provider/pom.xml
+++ b/bgp/topology-provider/pom.xml
@@ -63,7 +63,7 @@
 
         <!-- Test dependencies -->
 		<dependency>
-			<groupId>${project.groupId}</groupId>
+            <groupId>org.opendaylight.yangtools</groupId>
 			<artifactId>mockito-configuration</artifactId>
         </dependency>
 	</dependencies>
