--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -145,9 +145,8 @@
             <scope>test</scope>
         </dependency>
 		<dependency>
-			<groupId>${project.groupId}</groupId>
+            <groupId>org.opendaylight.yangtools</groupId>
 			<artifactId>mockito-configuration</artifactId>
-			<version>${project.version}</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
