--- a/pcep/impl/pom.xml
+++ b/pcep/impl/pom.xml
@@ -76,7 +76,7 @@
 			<artifactId>mockito-core</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>${project.groupId}</groupId>
+            <groupId>org.opendaylight.yangtools</groupId>
 			<artifactId>mockito-configuration</artifactId>
 		</dependency>
 		<dependency>
