--- a/pcep/topology-spi/pom.xml
+++ b/pcep/topology-spi/pom.xml
@@ -46,7 +46,7 @@
 
         <!-- Testing dependencies -->
 		<dependency>
-			<groupId>${project.groupId}</groupId>
+            <groupId>org.opendaylight.yangtools</groupId>
 			<artifactId>mockito-configuration</artifactId>
         </dependency>
 	</dependencies>
