--- a/programming/impl/pom.xml
+++ b/programming/impl/pom.xml
@@ -61,7 +61,7 @@
             <scope>test</scope>
         </dependency>
 		<dependency>
-			<groupId>${project.groupId}</groupId>
+            <groupId>org.opendaylight.yangtools</groupId>
 			<artifactId>mockito-configuration</artifactId>
         </dependency>
 	</dependencies>
