Switch to yangtools-provided mockito configuration
This depends on https://git.opendaylight.org/gerrit/#/c/4316/ being
merged.

Change-Id: Ibbe90af42acb202a42d2329b6e24ee88dc90c981
Signed-off-by: Robert Varga <rovarga@cisco.com>

--- a/bgp/parser-impl/pom.xml
+++ b/bgp/parser-impl/pom.xml
@@ -72,10 +72,8 @@
             <artifactId>ietf-inet-types</artifactId>
         </dependency>
         <dependency>
-            <groupId>${project.groupId}</groupId>
+            <groupId>org.opendaylight.yangtools</groupId>
             <artifactId>mockito-configuration</artifactId>
-            <version>${project.version}</version>
-            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
