--- a/framework/pom.xml
+++ b/framework/pom.xml
@@ -57,7 +57,7 @@
 
         <!-- Testing dependencies -->
         <dependency>
-            <groupId>org.opendaylight.bgpcep</groupId>
+            <groupId>org.opendaylight.yangtools</groupId>
             <artifactId>mockito-configuration</artifactId>
         </dependency>
         <dependency>
