--- a/pcep/spi/pom.xml
+++ b/pcep/spi/pom.xml
@@ -46,7 +46,7 @@
             <artifactId>junit</artifactId>
         </dependency>
         <dependency>
-            <groupId>${project.groupId}</groupId>
+            <groupId>org.opendaylight.yangtools</groupId>
             <artifactId>mockito-configuration</artifactId>
         </dependency>
     </dependencies>
