--- a/pcep/topology-provider/pom.xml
+++ b/pcep/topology-provider/pom.xml
@@ -60,7 +60,7 @@
 
         <!-- Test dependencies -->
         <dependency>
-            <groupId>${project.groupId}</groupId>
+            <groupId>org.opendaylight.yangtools</groupId>
             <artifactId>mockito-configuration</artifactId>
         </dependency>
         <dependency>
