Switch to yangtools-provided mockito configuration
This depends on https://git.opendaylight.org/gerrit/#/c/4316/ being
merged.

Change-Id: Ibbe90af42acb202a42d2329b6e24ee88dc90c981
Signed-off-by: Robert Varga <rovarga@cisco.com>

--- a/commons/parent/pom.xml
+++ b/commons/parent/pom.xml
@@ -91,9 +91,10 @@
                 <scope>test</scope>
             </dependency>
             <dependency>
-                <groupId>${project.groupId}</groupId>
+                <groupId>org.opendaylight.yangtools</groupId>
                 <artifactId>mockito-configuration</artifactId>
-                <version>${project.version}</version>
+                <!-- FIXME: change to yangtools.version once it's 0.6.0 -->
+                <version>${yang.binding.version}</version>
                 <scope>test</scope>
             </dependency>
 
