Switch to controller-provided protocol framework
Change-Id: I378be68986a867477044ef8f35a0f50e410de82f
Signed-off-by: Robert Varga <rovarga@cisco.com>

--- a/pcep/api/pom.xml
+++ b/pcep/api/pom.xml
@@ -31,10 +31,6 @@
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>framework</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>${project.groupId}</groupId>
             <artifactId>util</artifactId>
         </dependency>
         <dependency>
@@ -65,6 +61,11 @@
         <dependency>
             <groupId>org.opendaylight.yangtools</groupId>
             <artifactId>yang-common</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.opendaylight.controller</groupId>
+            <artifactId>protocol-framework</artifactId>
         </dependency>
 
         <!--
