--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -93,6 +93,10 @@
             <artifactId>sal-binding-broker-impl</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.opendaylight.controller</groupId>
+            <artifactId>protocol-framework</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.opendaylight.yangtools</groupId>
             <artifactId>concepts</artifactId>
             <version>0.6.0-SNAPSHOT</version>
